<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_keep_calm_and"
        android:title="@string/british_footprint" />
    <SwitchPreference
        android:defaultValue="true"
        android:disableDependentsState="false"
        android:key="@string/pref_key_show_action"
        android:title="Показать действия:" />
    <PreferenceCategory app:title="Действия:">
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/pref_key_show_action"
            android:key="@string/pref_key_do_homework_action"
            android:title="@string/delayte_domashki" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/pref_key_show_action"
            android:key="@string/pref_key_write_project_action"
            android:title="@string/pishite_proect" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/pref_key_show_action"
            android:key="@string/pref_key_keep_moving_interview"
            android:title="@string/prohodite_sobes" />
        <Preference
            android:fragment="com.salazarev.hw25sharedpreferencessettingsmenu.SecondPrefFragment"
            android:key="@string/pref_key_next_settings_screen"
            android:title="Следующий экран настроек" />
    </PreferenceCategory>
</PreferenceScreen>